--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -11,13 +11,18 @@
   align-items: center;
   margin-bottom: 1rem;
   margin-top: 1rem;
+  border-radius: 1rem;
+  padding: 0.54rem 1rem;
+  background-color: darkgreen;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 .inpBox input {
   border: none;
   outline: none;
   border-radius: 1rem;
   height: 1.7rem;
-  padding: 0.2rem 0.6rem;
+  padding: 0.1rem 0.6rem;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
@@ -26,6 +31,7 @@
   border: none;
   border-radius: 1rem;
   margin-left: 0.4rem;
+  margin-right: 1rem;
   transition: 0.2s ease-in-out;
   padding: 0rem 0.2rem;
   padding-top: 0.1rem;
