--- a/src/Components/TopLevel/DebtNotesContainer.module.css
+++ b/src/Components/TopLevel/DebtNotesContainer.module.css
@@ -1,13 +1,13 @@
 .mainContainer {
   height: 100%;
   background-color: rgb(255, 255, 255);
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   border-radius: 1rem;
   margin-top: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2rem;
 }
 .headingPart {
   width: 100%;
