--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -20,8 +20,8 @@
 .inpBox input {
   border: none;
   outline: none;
-  border-radius: 1rem;
-  height: 1.7rem;
+  border-radius: 0.3rem;
+  height: 1.5rem;
   padding: 0.1rem 0.6rem;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
@@ -43,6 +43,12 @@
   background-color: white;
 }
 .searchIcn {
-  transform: scale(0.8);
+  transform: scale(0.7);
   color: rgb(0, 61, 0);
+}
+.inpBox h4 {
+  font-family: poppins;
+  font-weight: 400;
+  font-size: 0.9rem;
+  margin-right: 0.5rem;
 }
