--- a/src/Components/AdditionalComponents/ListContainer.module.css
+++ b/src/Components/AdditionalComponents/ListContainer.module.css
@@ -11,7 +11,7 @@
 }
 .listItem h4 {
   margin: 0;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: 400;
   font-family: "poppins";
   color: rgb(61, 61, 61);
@@ -21,7 +21,7 @@
   margin: 0;
   font-family: "poppins";
   font-weight: 400;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: rgb(23, 23, 23);
 }
 
@@ -41,18 +41,18 @@
 
 .listBtn {
   font-family: "poppins";
-  font-weight: 500;
+  font-weight: 400;
   outline: none;
   border: 0.1rem solid darkgreen;
   border-radius: 0.4rem;
-  padding: 0.3rem 1rem;
-  background-color: #1db954;
+  padding: 0.3rem 0.7rem;
+  background-color: darkgreen;
   color: white;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .listBtn:hover {
   cursor: pointer;
-  background-color: #21cf5e;
-  transition: 0.1s ease;
+  background-color: #14863c;
+  transition: 0.2s ease;
 }
