--- a/src/Components/TopLevel/Footer.module.css
+++ b/src/Components/TopLevel/Footer.module.css
@@ -2,13 +2,42 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: poppins;
+  width: 100%;
+  padding: 0rem 1rem;
 }
 
 .storelinks img {
-  height: 5rem;
-  width: 17rem;
+  height: 4rem;
+  width: 12rem;
 }
 .storelinks {
   display: flex;
   align-items: center;
+  background-color: aliceblue;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+}
+
+.storelinks h3 {
+  color: black;
+  margin-right: 1rem;
+}
+
+.footerContainer {
+  background-color: black;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+  padding-top: 1rem;
+}
+.socialLinksPart {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 7rem;
+  margin-right: 2rem;
+}
+.icon {
+  transform: scale(1.1);
 }
