--- a/src/Components/TopLevel/DebtNotesContainer.module.css
+++ b/src/Components/TopLevel/DebtNotesContainer.module.css
@@ -58,7 +58,7 @@ a {
 .userTag {
   height: 2rem;
   border-radius: 0.5rem;
-  font-family: poppins;
+  font-family: "poppins";
   outline: none;
   border: 0.1rem solid #1db954;
   padding: 0.3rem 1.3rem;
