--- a/src/Components/AdditionalComponents/FormMain.module.css
+++ b/src/Components/AdditionalComponents/FormMain.module.css
@@ -24,3 +24,19 @@
   margin: 0.5rem 0.5rem;
   margin-left: 0;
 }
+.form_main {
+  border: 0.1rem solid grey;
+  padding: 2rem;
+  border-radius: 1rem;
+  margin-top: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+
+.formDiv {
+  width: 80%;
+}
+.form_main input {
+  height: 1rem;
+  font-size: 0.8rem;
+}
