--- a/src/Components/AdditionalComponents/FormMain.module.css
+++ b/src/Components/AdditionalComponents/FormMain.module.css
@@ -37,6 +37,30 @@
   width: 80%;
 }
 .form_main input {
-  height: 1rem;
+  padding: 0.5rem 0.5rem;
   font-size: 0.8rem;
+  width: 30rem;
+}
+
+.form_main button {
+  width: 100%;
+  outline: none;
+  background-color: #1db954;
+  padding: 0.5rem;
+  font-size: 0.9rem;
+  color: white;
+  font-family: "poppins";
+  border: none;
+  cursor: pointer;
+  transition: 0.2s ease;
+  border-radius: 0.5rem;
+  margin-top: 0.4rem;
+}
+.form_main button:hover {
+  background-color: rgb(36, 194, 92);
+}
+
+.mainGrid {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
 }
