--- a/src/Components/AdditionalComponents/FormMain.module.css
+++ b/src/Components/AdditionalComponents/FormMain.module.css
@@ -59,7 +59,11 @@
 .form_main button:hover {
   background-color: rgb(36, 194, 92);
 }
-
+.form_main label {
+  color: #404040;
+  font-family: "poppins";
+  font-weight: 400;
+}
 .mainGrid {
   margin-top: 1rem;
   margin-bottom: 2rem;
