--- a/src/Components/AdditionalComponents/FormMain.module.css
+++ b/src/Components/AdditionalComponents/FormMain.module.css
@@ -25,7 +25,7 @@
   margin-left: 0;
 }
 .form_main {
-  border: 0.1rem solid grey;
+  border: 0.1rem solid rgb(221, 221, 221);
   padding: 2rem;
   border-radius: 1rem;
   margin-top: 1rem;
