--- a/src/Components/TopLevel/DebtNotesContainer.module.css
+++ b/src/Components/TopLevel/DebtNotesContainer.module.css
@@ -56,6 +56,9 @@ a {
 }
 
 .userTag {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   height: 2rem;
   border-radius: 0.5rem;
   font-family: "poppins";
