--- a/src/Components/AdditionalComponents/AccountInfoPart.module.css
+++ b/src/Components/AdditionalComponents/AccountInfoPart.module.css
@@ -39,7 +39,14 @@
   background-color: #1db954;
   border-radius: 0.5rem;
   color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  transition: 0.2s ease;
   cursor: pointer;
+}
+.accountBtnContainer button:hover {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 .icn {
   margin-right: 0.2rem;
