--- a/src/Components/SignupAndAuthentication/ProprietorSignupForm.module.css
+++ b/src/Components/SignupAndAuthentication/ProprietorSignupForm.module.css
@@ -42,3 +42,9 @@
 .form_main button:hover {
   background-color: rgb(36, 194, 92);
 }
+.toggleText {
+  text-align: center;
+}
+.toggleText h4 {
+  cursor: pointer;
+}
