--- a/src/Components/UserUIComponents/MainContainer.module.css
+++ b/src/Components/UserUIComponents/MainContainer.module.css
@@ -71,3 +71,9 @@
   margin: 0;
   margin-top: 1rem;
 } */
+.reviewtextBtn h4 {
+  font-family: "poppins";
+  font-weight: 600;
+  color: #1db954;
+  cursor: pointer;
+}
