--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -7,13 +7,12 @@
 
 .inpBox {
   display: flex;
-  justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
   margin-top: 0.5rem;
   border-radius: 1rem;
   padding: 0.54rem 1rem;
-  background-color: darkgreen;
+  background-color: rgb(0, 90, 0);
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
