--- a/src/Components/TopLevel/DebtDetails.module.css
+++ b/src/Components/TopLevel/DebtDetails.module.css
@@ -84,9 +84,18 @@
   box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
-.btnContainer :nth-child(1) {
-  background-color: rgb(241, 51, 51);
-}
+
 .btnContainer :nth-child(2) {
   background-color: #1db954;
+}
+
+.btnContainer a {
+  text-decoration: none;
+  background-color: none;
+}
+.lnkbtn {
+  background-color: #1db954;
+}
+.del {
+  background-color: rgb(241, 51, 51);
 }
