--- a/src/Components/AdditionalComponents/ShopInfo.module.css
+++ b/src/Components/AdditionalComponents/ShopInfo.module.css
@@ -48,3 +48,6 @@
   box-shadow: rgba(0, 0, 0, 0.3) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
+.btnSection button:active {
+  background-color: #168f40;
+}
