--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -41,6 +41,10 @@
   cursor: pointer;
   background-color: white;
 }
+.inpBox button:active {
+  cursor: pointer;
+  background-color: rgb(131, 131, 131);
+}
 .searchIcn {
   transform: scale(0.7);
   color: rgb(0, 61, 0);
