--- a/src/Components/AdditionalComponents/GeneralButton.module.css
+++ b/src/Components/AdditionalComponents/GeneralButton.module.css
@@ -3,6 +3,7 @@
   width: 12rem;
   height: 2rem;
   margin: auto;
+  /* margin-bottom: 1rem; */
   font-size: 1rem;
   font-family: "poppins";
   display: flex;
