--- a/src/Components/AdditionalComponents/ReviewNFeedback.module.css
+++ b/src/Components/AdditionalComponents/ReviewNFeedback.module.css
@@ -51,3 +51,7 @@
 .backbtn:hover {
   background-color: rgb(36, 194, 92);
 }
+.syvform button:active,
+.backbtn:active {
+  background-color: #137a37;
+}
