--- a/src/Components/SignupAndAuthentication/CustomerSignupForm.module.css
+++ b/src/Components/SignupAndAuthentication/CustomerSignupForm.module.css
@@ -26,7 +26,7 @@
   outline: none;
   background-color: #1db954;
   padding: 0.5rem;
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: white;
   font-family: "poppins";
   border: none;
@@ -39,6 +39,10 @@
 .sendBtn:hover {
   background-color: rgb(36, 194, 92);
 }
+.sendBtn:active {
+  background-color: #137a37;
+}
+
 .toggleText {
   text-align: center;
 }
