--- a/src/Components/UserUIComponents/MainContainer.module.css
+++ b/src/Components/UserUIComponents/MainContainer.module.css
@@ -1,16 +1,3 @@
-.main {
-  height: 100%;
-  background-color: rgb(255, 255, 255);
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  border-radius: 1rem;
-  margin-top: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 2rem;
-  color: rgb(61, 61, 61);
-  font-family: "poppins";
-}
 .innerBox {
   border: 0.1rem solid rgb(211, 211, 211);
   width: 80%;
@@ -67,13 +54,38 @@
 .tipIcon {
   color: rgb(254, 210, 87);
 }
-/* .header h1 {
-  margin: 0;
-  margin-top: 1rem;
-} */
 .reviewtextBtn h4 {
   font-family: "poppins";
   font-weight: 600;
   color: #1db954;
   cursor: pointer;
+}
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .header h1 {
+    font-size: 1.5rem;
+  }
+  .innerBox {
+    border: 0.1rem solid rgb(211, 211, 211);
+    width: 70%;
+  }
+  .scoreCircle {
+    width: 45%;
+    height: 6rem;
+  }
+}
+@media only screen and (min-width: 352px) and (max-width: 576px) {
+  .scoreCircle {
+    width: 40%;
+  }
+}
+@media only screen and (min-width: 376px) and (max-width: 500px) {
+  .scoreCircle {
+    width: 30%;
+  }
+}
+@media only screen and (min-width: 500px) and (max-width: 576px) {
+  .scoreCircle {
+    width: 25%;
+  }
 }
