--- a/src/Components/UserUIComponents/MainContainer.module.css
+++ b/src/Components/UserUIComponents/MainContainer.module.css
@@ -73,6 +73,22 @@
     width: 45%;
     height: 6rem;
   }
+  .tipBox {
+    justify-content: center;
+    font-size: 0.9rem;
+  }
+  .gridOuter h4 {
+    font-size: 0.8rem;
+    text-align: center;
+  }
+  .gridOuter {
+    width: 80%;
+    flex-wrap: wrap;
+  }
+  .reviewtextBtn h4 {
+    font-size: 0.9rem;
+    text-align: center;
+  }
 }
 @media only screen and (min-width: 352px) and (max-width: 576px) {
   .scoreCircle {
