--- a/src/Components/AdditionalComponents/AccountInfoPart.module.css
+++ b/src/Components/AdditionalComponents/AccountInfoPart.module.css
@@ -51,3 +51,28 @@
 .icn {
   margin-right: 0.2rem;
 }
+
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .mainGrid {
+    width: 100%;
+  }
+  .row {
+    height: 2rem;
+    margin-top: 0.5rem;
+  }
+  .infoBox {
+    border-spacing: 0.4rem;
+  }
+  .row td {
+    font-weight: 400;
+
+    padding: 0.2rem 0.5rem;
+    font-size: 0.8rem;
+  }
+  .accountBtnContainer button {
+    height: 2.4rem;
+    width: 10rem;
+    font-size: 0.8rem;
+  }
+}
