--- a/src/Components/TopLevel/AccountPage.module.css
+++ b/src/Components/TopLevel/AccountPage.module.css
@@ -13,3 +13,10 @@
   color: rgb(61, 61, 61);
   font-family: "poppins";
 }
+
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .header h1 {
+    font-size: 1.4rem;
+  }
+}
