--- a/src/Components/TopLevel/Header.module.css
+++ b/src/Components/TopLevel/Header.module.css
@@ -10,3 +10,14 @@
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
 }
+
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .logoImg {
+    height: 2rem;
+    width: 2rem;
+  }
+  .icn {
+    transform: scale(0.8);
+  }
+}
