--- a/src/Components/TopLevel/AccountPage.module.css
+++ b/src/Components/TopLevel/AccountPage.module.css
@@ -20,3 +20,8 @@
     font-size: 1.4rem;
   }
 }
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .header h1 {
+    font-size: 2rem;
+  }
+}
