--- a/src/Components/AdditionalComponents/BasicCoverDiv.module.css
+++ b/src/Components/AdditionalComponents/BasicCoverDiv.module.css
@@ -21,3 +21,11 @@
     font-size: 1.4rem;
   }
 }
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  .mainGrid {
+    width: 100%;
+  }
+  .mainGrid h1 {
+    font-size: 1.8rem;
+  }
+}
