--- a/src/Components/UserUIComponents/MCSPage.module.css
+++ b/src/Components/UserUIComponents/MCSPage.module.css
@@ -35,3 +35,16 @@
     font-size: 0.9rem;
   }
 }
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .detailsBox {
+    width: 95%;
+    padding: 1rem;
+  }
+
+  .detailsBox h3 {
+    font-size: 1.3rem;
+  }
+  .detailsBox p {
+    font-size: 1rem;
+  }
+}
