--- a/src/Components/UserUIComponents/MainContainer.module.css
+++ b/src/Components/UserUIComponents/MainContainer.module.css
@@ -144,3 +144,38 @@
     width: 21%;
   }
 }
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .header h1 {
+    font-size: 2rem;
+  }
+  .innerBox {
+    border: 0.1rem solid rgb(211, 211, 211);
+    width: 70%;
+  }
+  .scoreCircle {
+    width: 21%;
+    height: 6rem;
+  }
+  .tipBox {
+    justify-content: center;
+    font-size: 0.9rem;
+  }
+  .gridOuter h4 {
+    font-size: 0.9rem;
+    text-align: center;
+  }
+  .gridOuter {
+    width: 70%;
+    flex-wrap: wrap;
+  }
+  .reviewtextBtn h4 {
+    font-size: 1rem;
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 900px) and (max-width: 992px) {
+  .scoreCircle {
+    width: 19%;
+    height: 6rem;
+  }
+}
