--- a/src/Components/TopLevel/Footer.module.css
+++ b/src/Components/TopLevel/Footer.module.css
@@ -107,7 +107,6 @@
     width: 100%;
   }
 }
-/* Responsive styling from here. */
 @media only screen and (min-width: 576px) and (max-width: 768px) {
   .storelinks img {
     height: 3rem;
@@ -134,7 +133,6 @@
     margin-right: 0rem;
   }
 }
-/* Responsive styling from here. */
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   .storelinks img {
     height: 3rem;
@@ -148,7 +146,6 @@
     width: 100%;
   }
   .storelinks {
-    /* flex-wrap: wrap; */
     justify-content: space-around;
   }
   .footerTop {
@@ -160,5 +157,41 @@
   .socialLinksPart {
     margin-top: 1rem;
     margin-left: 3rem;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .storelinks img {
+    height: 3rem;
+    width: 9rem;
+  }
+  .icon {
+    transform: scale(1);
+  }
+  .storelinks h3 {
+    font-size: 1.2rem;
+    width: 100%;
+  }
+  .storelinks {
+    margin-right: 1rem;
+    /* flex-wrap: wrap; */
+    justify-content: space-around;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1281px) {
+  .storelinks img {
+    height: 3rem;
+    width: 9rem;
+  }
+  .icon {
+    transform: scale(1);
+  }
+  .storelinks h3 {
+    font-size: 1.2rem;
+    width: 100%;
+  }
+  .storelinks {
+    margin-right: 1rem;
+
+    justify-content: space-around;
   }
 }
