--- a/src/Components/SignupAndAuthentication/LoginPage.module.css
+++ b/src/Components/SignupAndAuthentication/LoginPage.module.css
@@ -68,4 +68,16 @@
   }
 }
 @media only screen and (min-width: 576px) and (max-width: 720px) {
+  .form_main input {
+    width: 20rem;
+    padding: 0.3rem 0.3rem;
+  }
+  .form_main button {
+    height: 2rem;
+    font-size: 1rem;
+    width: 15rem;
+  }
+  .toggleText h4 {
+    font-size: 0.8rem;
+  }
 }
