--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -12,7 +12,7 @@
   margin-top: 0.5rem;
   border-radius: 1rem;
   padding: 0.54rem 1rem;
-  background-color: rgb(0, 90, 0);
+  background-color: #0e8136;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
