--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -55,3 +55,7 @@
   font-size: 0.9rem;
   margin-right: 0.5rem;
 }
+
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+}
