--- a/src/Components/TopLevel/DebtNotesContainer.module.css
+++ b/src/Components/TopLevel/DebtNotesContainer.module.css
@@ -16,33 +16,11 @@
   align-items: center;
   justify-content: space-between;
 }
-.noteBtn {
-  outline: none;
-  background-color: rgb(237, 237, 237);
-  border: none;
-  border-radius: 0.5rem;
-  color: #191414;
-  height: 2.5rem;
-  padding: 0.3rem 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  cursor: pointer;
-  transition: 0.2s ease;
-}
 
-.noteBtn:active {
-  background-color: rgb(170, 170, 170);
-}
 a {
   text-decoration: none;
 }
-.noteBtn h4 {
-  font-size: 0.9rem;
-  margin: 0;
-  font-weight: 500;
-  font-family: "poppins";
-}
+
 .noteIcn {
   transform: scale(0.7);
   margin-bottom: 0.2rem;
@@ -67,9 +45,37 @@ a {
   font-family: "poppins";
   font-weight: 500;
   outline: none;
-  /* border: 0.1rem solid #1db954; */
   padding: 0.3rem 1.3rem;
   text-transform: capitalize;
   cursor: not-allowed;
-  /* box-shadow: #19a049 0px 4px 8px -2px, #19a049 0px 0px 0px 1px; */
+}
+.tags {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.clickEffect {
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+.clickEffect:active {
+  background-color: rgb(170, 170, 170);
+}
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .headingPart h3 {
+    font-size: 1.1rem;
+    color: rgb(128, 128, 128);
+  }
+
+  .userTag {
+    height: 1.5rem;
+    font-size: 0.8rem;
+    padding: 0.4rem 0.7rem;
+  }
+  .noteIcn {
+    transform: scale(0.9);
+    margin-bottom: 0.2rem;
+  }
 }
