--- a/src/Components/AdditionalComponents/ListContainer.module.css
+++ b/src/Components/AdditionalComponents/ListContainer.module.css
@@ -56,3 +56,31 @@
 .listBtn:active {
   background-color: #137a37;
 }
+
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .listItem h4 {
+    margin: 0;
+    font-size: 0.6rem;
+  }
+
+  .listItem h3 {
+    margin: 0;
+    font-size: 0.8rem;
+  }
+  .listBox {
+    margin-top: 2rem;
+  }
+  .listBtn {
+    border-radius: 1.5rem;
+    padding: 0.2rem 0.4rem;
+    font-size: 0.6rem;
+  }
+  .listItem {
+    padding: 0.2rem 0.4rem;
+    height: 2.7rem;
+    margin: 0.5rem 0.5rem;
+    border: 0.1rem solid rgb(221, 221, 221);
+    justify-content: space-between;
+  }
+}
