--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -96,3 +96,37 @@
     width: 80vw;
   }
 }
+
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .inputDiv {
+    width: 40vw;
+  }
+  .inpBox {
+    justify-content: center;
+    padding: 0.54rem 0.54rem;
+    margin-bottom: 1rem;
+    margin-top: 0.3rem;
+  }
+  .inpBox h4 {
+    display: none;
+  }
+  .inputDiv:nth-child(1) {
+    margin-left: 0.3rem;
+  }
+  .inputDiv input {
+    height: 1.2rem;
+    font-size: 0.9rem;
+    padding: 0.1rem 0.3rem;
+  }
+  .inpBox button {
+    margin: 0rem 0.1rem 0rem 0.4rem;
+    padding: 0rem 0rem;
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 2rem;
+  }
+  .searchIcn {
+    transform: scale(0.6);
+    color: rgb(0, 61, 0);
+  }
+}
