--- a/src/Components/AdditionalComponents/ListContainer.module.css
+++ b/src/Components/AdditionalComponents/ListContainer.module.css
@@ -84,3 +84,10 @@
     justify-content: space-between;
   }
 }
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .listBtn {
+    border-radius: 1.5rem;
+    padding: 0.2rem 0.4rem;
+    font-size: 0.8rem;
+  }
+}
