--- a/src/Components/TopLevel/DebtNotesContainer.module.css
+++ b/src/Components/TopLevel/DebtNotesContainer.module.css
@@ -62,6 +62,7 @@ a {
 .clickEffect:active {
   background-color: rgb(170, 170, 170);
 }
+
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .headingPart h3 {
@@ -88,5 +89,27 @@ a {
   .tags {
     flex-wrap: wrap;
     gap: 1rem;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 720px) {
+  .tags {
+    flex-wrap: wrap;
+    gap: 0.7rem;
+  }
+  .headingPart {
+    display: block;
+    text-align: center;
+  }
+  .userTag {
+    height: 1.8rem;
+    font-size: 0.9rem;
+    padding: 1rem 1rem;
+    width: 10rem;
+    justify-content: center;
+  }
+  .headingPart h3 {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
   }
 }
