--- a/src/Components/AdditionalComponents/FiltersDiv.module.css
+++ b/src/Components/AdditionalComponents/FiltersDiv.module.css
@@ -130,3 +130,17 @@
     color: rgb(0, 61, 0);
   }
 }
+@media only screen and (min-width: 720px) and (max-width: 992px) {
+  .inputDiv {
+    width: 35vw;
+  }
+  .inpBox h4 {
+    display: none;
+  }
+}
+@media only screen and (min-width: 930px) and (max-width: 992px) {
+  .inpBox h4 {
+    font-size: 0.9rem;
+    display: block;
+  }
+}
