--- a/src/Components/AdditionalComponents/ShopInfo.module.css
+++ b/src/Components/AdditionalComponents/ShopInfo.module.css
@@ -27,3 +27,52 @@
 .btnSection button {
   margin-left: 1rem;
 }
+/* Responsive styling from here. */
+@media only screen and (min-width: 280px) and (max-width: 576px) {
+  .table_m td {
+    padding: 0.2rem 0.5rem;
+    font-size: 0.7rem;
+  }
+  .btnSection button {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    width: 7rem;
+    height: 1.8rem;
+  }
+  .btnSection {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+}
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .table_m td {
+    padding: 0.3rem 0.7rem;
+    font-size: 0.8rem;
+  }
+  .btnSection button {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    width: 7rem;
+    height: 2rem;
+  }
+  .btnSection {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+}
+@media only screen and (min-width: 721px) and (max-width: 992px) {
+  .table_m td {
+    padding: 0.4rem 0.8rem;
+    font-size: 0.9rem;
+  }
+  .btnSection button {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    width: 10rem;
+    height: 2.2rem;
+  }
+  .btnSection {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+}
