--- a/src/Components/SignupAndAuthentication/CustomerSignupForm.module.css
+++ b/src/Components/SignupAndAuthentication/CustomerSignupForm.module.css
@@ -44,3 +44,17 @@ a {
     padding: 0.4rem 0.4rem;
   }
 }
+@media only screen and (min-width: 577px) and (max-width: 720px) {
+  .form_main input {
+    font-size: 0.8rem;
+    width: 20rem;
+    padding: 0.5rem 0.5rem;
+  }
+}
+@media only screen and (min-width: 721px) and (max-width: 992px) {
+  .form_main input {
+    font-size: 0.9rem;
+    width: 23rem;
+    padding: 0.6rem 0.6rem;
+  }
+}
