--- a/src/Components/AdditionalComponents/AccountInfoPart.module.css
+++ b/src/Components/AdditionalComponents/AccountInfoPart.module.css
@@ -3,6 +3,7 @@
   border: 0.1rem solid rgb(211, 211, 211);
   border-radius: 0.5rem;
   margin-bottom: 2rem;
+  padding: 0.7rem;
 }
 
 .row {
@@ -11,6 +12,7 @@
 }
 .infoBox {
   border-spacing: 0.7rem;
+  margin-bottom: 1rem;
 }
 .row td {
   font-weight: 400;
@@ -23,7 +25,8 @@
 .accountBtnContainer {
   width: 100%;
   padding-bottom: 1rem;
-  padding-top: 1rem;
+  padding-top: 0.7rem;
+  border-top: 0.1rem solid rgb(211, 211, 211);
 }
 
 /* Responsive styling from here. */
