--- a/src/Components/AdditionalComponents/UserLevelBar.module.css
+++ b/src/Components/AdditionalComponents/UserLevelBar.module.css
@@ -1,7 +1,15 @@
 .bar {
+  height: 3rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: #ffffff;
 }
 
 .baseBg {
+  background-color: rgb(30, 30, 30);
 }
 .bronzeBg {
 }
