--- a/src/Components/AdditionalComponents/UserLevelBar.module.css
+++ b/src/Components/AdditionalComponents/UserLevelBar.module.css
@@ -1,24 +1,55 @@
 .bar {
-  height: 3rem;
+  height: auto;
   width: 100%;
   border-radius: 0.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  text-align: center;
   color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   font-size: 0.9rem;
+  padding-bottom: 1rem;
+  background-color: rgb(30, 30, 30);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
+.inner_bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 1.8rem;
+  width: 80%;
+  border-radius: 0.5rem;
+}
+.heading {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 0.8rem;
+  padding: 0.5rem;
+  width: 100%;
+}
+.uppr {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .baseBg {
-  background-color: rgb(30, 30, 30);
+  background-color: rgb(42, 42, 42);
 }
 .bronzeBg {
+  background-color: #cd7f32;
 }
 .silverBg {
+  background-color: #c0c0c0;
 }
 .goldBg {
+  background-color: #ffd700;
 }
 .platinumBg {
+  background-color: #e5e4e2;
 }
