--- a/src/Components/TopLevel/AccountPage.module.css
+++ b/src/Components/TopLevel/AccountPage.module.css
@@ -17,7 +17,8 @@
 /* Responsive styling from here. */
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .header h1 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    text-align: center;
   }
 }
 @media only screen and (min-width: 280px) and (max-width: 576px) {
